[package]
name = "highway-core"
version = "0.1.0"
authors = ["Andreas Fackler <andreas@casperlabs.io>"]
edition = "2018"
description = "The permissioned Highway Core consensus algorithm."
homepage = "https://casperlabs.io"
repository = "https://github.com/CasperLabs/CasperLabs"
license-file = "../LICENSE"

[dependencies]
bincode = "1.2.1"
derive_more = "0.99.7"
displaydoc = "0.1.6"
serde = { version = "1.0.111", features = [ "derive" ] }
thiserror = "1.0.17"
