[package]
name = "contract-context-2"
version = "0.1.0"
authors = ["Maciej Zieliński <maciej@casperlabs.io>"]
edition = "2018"

[[bin]]
name = "contract_context_2"
path = "src/main.rs"
bench = false
doctest = false
test = false

[features]
std = ["contract/std"]

[dependencies]
contract = { path = "../../../contract", package = "casperlabs-contract" }
types = { path = "../../../types", package = "casperlabs-types" }
